--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ PyMuPDF==1.14.20
 nlp==0.4.0
 spacy==1.7.1
 fitz==0.0.1.dev2
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+flasgger==0.9.4
